--- a/views/accounts/forgot.ejs
+++ b/views/accounts/forgot.ejs
@@ -5,7 +5,7 @@
     <legend>Forgot your password?</legend>
     <div class="form-group">
       <label for="email">Email</label>
-      <input id="email" class="form-control" type="email" name="email" placeholder="email" autofocus>
+      <input id="email" class="form-control" type="email" name="email" placeholder="email" autofocus required>
     </div>
     <div class="form-group">
       <button class="btn btn-primary">Reset Password</button>
