--- a/views/accounts/login.ejs
+++ b/views/accounts/login.ejs
@@ -4,10 +4,10 @@
   <form action="/accounts/login" method="post">
     <legend>Login</legend>
     <div class="form-group">
-      <input class="form-control" type="text" name="username" placeholder="username">
+      <input class="form-control" type="text" name="username" placeholder="username" autofocus required>
     </div>
     <div class="form-group">
-      <input class="form-control" type="password" name="password" placeholder="password">
+      <input class="form-control" type="password" name="password" placeholder="password" required>
     </div>
     <div class="form-group">
       <button class="btn btn-lg btn-primary btn-block">Login</button>
