--- a/views/accounts/register.ejs
+++ b/views/accounts/register.ejs
@@ -5,31 +5,31 @@
     <legend>Sign Up</legend>
     <div class="form-group">
       <label for="firstName">First Name</label>
-      <input id="firstName" class="form-control" type="text" name="firstName" placeholder="first name">
+      <input id="firstName" class="form-control" type="text" name="firstName" placeholder="first name" autofocus required>
     </div>
     <div class="form-group">
       <label for="lastName">Last Name</label>
-      <input id="lastName" class="form-control" type="text" name="lastName" placeholder="last name">
+      <input id="lastName" class="form-control" type="text" name="lastName" placeholder="last name" required>
     </div>
     <div class="form-group">
       <label for="username">Username</label>
-      <input id="username" class="form-control" type="text" name="username" placeholder="username">
+      <input id="username" class="form-control" type="text" name="username" placeholder="username" required>
     </div>
     <div class="form-group">
       <label for="password">Password</label>
-      <input id="password" class="form-control" type="password" name="password" placeholder="password">
+      <input id="password" class="form-control" type="password" name="password" placeholder="password" required>
     </div>
     <div class="form-group">
       <label for="confirm">Confirm password</label>
-      <input id="confirm" class="form-control" type="password" name="confirm" placeholder="retype your password">
+      <input id="confirm" class="form-control" type="password" name="confirm" placeholder="retype your password" required>
     </div>
     <div class="form-group">
       <label for="email">Email</label>
-      <input id="email" class="form-control" type="email" name="email" placeholder="email">
+      <input id="email" class="form-control" type="email" name="email" placeholder="email" required>
     </div>
     <div class="form-group">
       <label for="profilePic">Profile Picture</label>
-      <input id="profilePic" class="form-control" type="text" name="profilePic" placeholder="profile picture url">
+      <input id="profilePic" class="form-control" type="text" name="profilePic" placeholder="profile picture url" required>
     </div>
     <div class="form-group">
       <button class="btn btn-lg btn-primary btn-block">Sign Up</button>
