--- a/views/accounts/reset.ejs
+++ b/views/accounts/reset.ejs
@@ -5,11 +5,11 @@
 	  <legend>Reset Password</legend>
 	  <div class="form-group">
 	    <label for="password">New Password</label>
-	    <input class="form-control" type="password" name="password" value="" placeholder="New password" autofocus/>
+	    <input class="form-control" type="password" name="password" value="" placeholder="New password" autofocus required>
 	  </div>
 	  <div class="form-group">
 	    <label for="confirm">Confirm Password</label>
-	    <input class="form-control" type="password" name="confirm" value="" placeholder="Confirm password"/>
+	    <input class="form-control" type="password" name="confirm" value="" placeholder="Confirm password" required>
 	  </div>
 	  <div class="form-group">
 	    <button type="submit" class="btn btn-primary">Update Password</button>
