--- a/views/campgrounds/edit.ejs
+++ b/views/campgrounds/edit.ejs
@@ -5,23 +5,23 @@
     <legend>Edit <%= campground.name %></legend>
     <div class="form-group">
       <label for="name">Name</label>
-      <input id="name" class="form-control" type="text" name="campground[name]" value="<%= campground.name %>">
+      <input id="name" class="form-control" type="text" name="campground[name]" value="<%= campground.name %>" autofocus required>
     </div>
     <div class="form-group">
       <label for="image">Image</label>
-      <input id="image" class="form-control" type="text" name="campground[image]" value="<%= campground.image %>">
+      <input id="image" class="form-control" type="text" name="campground[image]" value="<%= campground.image %>" required>
     </div>
     <div class="form-group">
       <label for="description">Description</label>
-      <input id="description" class="form-control" type="text" name="campground[description]" value="<%= campground.description %>">
+      <input id="description" class="form-control" type="text" name="campground[description]" value="<%= campground.description %>" required>
     </div>
     <div class="form-group">
       <label for="price">Price</label>
-      <input id="price" class="form-control" type="number" name="campground[price]" value="<%= campground.price %>" min="0.01" step="0.01">
+      <input id="price" class="form-control" type="number" name="campground[price]" value="<%= campground.price %>" min="0.01" step="0.01" required>
     </div>
     <div class="form-group">
       <label for="location">Location</label>
-      <input id="location" class="form-control" type="text" name="location" value="<%= campground.location %>">
+      <input id="location" class="form-control" type="text" name="location" value="<%= campground.location %>" required>
     </div>
     <div class="form-group">
       <button class="btn btn-lg btn-primary btn-block">Submit!</button>
