--- a/views/campgrounds/index.ejs
+++ b/views/campgrounds/index.ejs
@@ -12,11 +12,13 @@
   </div>
 </header>
 
-<div class="row">
-  <div class="col-lg-12">
-    <h3>Our Most Popular Campgrounds!</h3>
+<% if (campgrounds.length !== 0) { %>
+  <div class="row">
+    <div class="col-plg-12">
+      <h3>Our Most Popular Campgrounds!</h3>
+    </div>
   </div>
-</div>
+<% } %>
 
 <div class="row text-center flex">
   <% campgrounds.forEach((campground) => { %>
