--- a/views/campgrounds/new.ejs
+++ b/views/campgrounds/new.ejs
@@ -5,23 +5,23 @@
     <legend>Create a New Campground</legend>
     <div class="form-group">
       <label for="name">Name</label>
-      <input id="name" class="form-control" type="text" name="campground[name]" placeholder="name">
+      <input id="name" class="form-control" type="text" name="campground[name]" placeholder="name" autofocus required>
     </div>
     <div class="form-group">
       <label for="image">Image</label>
-      <input id="image" class="form-control" type="text" name="campground[image]" placeholder="image url">
+      <input id="image" class="form-control" type="text" name="campground[image]" placeholder="image url" required>
     </div>
     <div class="form-group">
       <label for="description">Description</label>
-      <input id="description" class="form-control" type="text" name="campground[description]" placeholder="description">
+      <input id="description" class="form-control" type="text" name="campground[description]" placeholder="description" required>
     </div>
     <div class="form-group">
       <label for="price">Price</label>
-      <input id="price" class="form-control" type="number" name="campground[price]" placeholder="price" min="0.01" step="0.01">
+      <input id="price" class="form-control" type="number" name="campground[price]" placeholder="price" min="0.01" step="0.01" required>
     </div>
     <div class="form-group">
       <label for="location">Location</label>
-      <input id="location" class="form-control" type="text" name="location" placeholder="location">
+      <input id="location" class="form-control" type="text" name="location" placeholder="location" required>
     </div>
     <div class="form-group">
       <button class="btn btn-lg btn-primary btn-block">Submit!</button>
