--- a/views/comments/edit.ejs
+++ b/views/comments/edit.ejs
@@ -5,7 +5,7 @@
     <legend>Edit Comment</legend>
     <div class="form-group">
       <label for="comment">Comment</label>
-      <input id="comment" class="form-control" type="text" name="comment[text]" value="<%= comment.text %>">
+      <input id="comment" class="form-control" type="text" name="comment[text]" value="<%= comment.text %>" autofocus required>
     </div>
     <div class="form-group">
       <button class="btn btn-lg btn-primary btn-block">Submit!</button>
