--- a/views/comments/new.ejs
+++ b/views/comments/new.ejs
@@ -5,7 +5,7 @@
     <legend>Add New Comment to <%= campground.name %></legend>
     <div class="form-group">
       <label for="comment">Comment</label>
-      <input id="comment" class="form-control" type="text" name="comment[text]" placeholder="text">
+      <input id="comment" class="form-control" type="text" name="comment[text]" placeholder="text" autofocus required>
     </div>
     <div class="form-group">
       <button class="btn btn-lg btn-primary btn-block">Submit!</button>
