--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -26,12 +26,6 @@
           <ul class="nav navbar-nav">
             <li class="<%= typeof page !== 'undefined' && page === 'campgrounds' ? 'active' : '' %>"><a href="/campgrounds">Home</a></li>
           </ul>
-          <form class="navbar-form navbar-right" role="search" action="/campgrounds" method="get">
-            <div class="form-group">
-              <input class="form-control" type="text" name="search" placeholder="Search campgounds">
-              <button type="submit" class="btn btn-default">Search</button>
-            </div>
-          </form>
           <ul class="nav navbar-nav navbar-right">
             <% if (!currentUser) { %>
               <li class="<%= typeof page !== 'undefined' && page === 'login' ? 'active' : '' %>"><a href="/accounts/login">Login</a></li>
@@ -41,6 +35,14 @@
               <li><a href="/accounts/logout">Logout</a></li>
             <% } %>
           </ul>
+          <div class="col-sm-3 col-md-3 pull-right">
+            <form class="navbar-form" role="search" action="/campgrounds" method="get">
+              <div class="form-group">
+                <input class="form-control" type="text" name="search" placeholder="Search">
+                <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
+              </div>
+            </form>
+          </div>
         </div>
       </div>
     </nav>
